重构Agent[Java版]