@@ -1,23 +1,25 @@
 package cn.edu.pku.lixutian.helper;
 
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Comparator;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 
 public class ListFileHelper {
+    private static final long MAX_AGENT_FILE_BYTES = 2L * 1024 * 1024;
     private static final Set<String> IGNORED_DIRECTORIES = Set.of(
             ".git", "node_modules", "target", "build", "dist", "__pycache__", ".venv", "venv", "env",
             "preprocess1", "delombok", "preprocess2"
     );
 
     /**
-     * 递归查找指定目录下所有以.java结尾的文件，
-     * 返回文件路径字符串，路径分隔符统一替换为点（'.'）
+     * 递归查找指定目录下所有以.java结尾的文件。
+     * 返回相对于源码根的路径，例如 cn/edu/pku/Foo.java。
      * @param folderPath 文件夹路径
      * @return 替换后的文件路径列表
      */
@@ -28,6 +30,7 @@ public class ListFileHelper {
             return javaFiles;
         }
         recursiveFind(folder, javaFiles, folder.getAbsolutePath());
+        javaFiles.sort(Comparator.naturalOrder());
         return javaFiles;
     }
 
@@ -51,6 +54,9 @@ public class ListFileHelper {
         if (files == null) return;
 
         for (File file : files) {
+            if (Files.isSymbolicLink(file.toPath())) {
+                continue;
+            }
             if (file.isDirectory()) {
                 if (!IGNORED_DIRECTORIES.contains(file.getName())) {
                     recursiveFindAll(file, result, rootPath);
@@ -67,28 +73,32 @@ public class ListFileHelper {
         if (files == null) return;
 
         for (File f : files) {
+            if (Files.isSymbolicLink(f.toPath())) {
+                continue;
+            }
             if (f.isDirectory()) {
                 if (IGNORED_DIRECTORIES.contains(f.getName())) {
                     continue;
                 }
                 recursiveFind(f, result, rootPath);
             } else if (f.isFile() && f.getName().endsWith(".java")) {
-                // 获取相对于根目录的路径，替换文件分隔符
                 String relativePath = f.getAbsolutePath().substring(rootPath.length() + 1);
-                String replaced = relativePath.replace(File.separatorChar, '.');
-                result.add(replaced.substring(0,replaced.length() - 5));
+                result.add(relativePath.replace(File.separatorChar, '/'));
             }
         }
     }
 
     public static String getFileContent(String baseFolder, String javaFileName) throws IOException {
-        // javaFileName示例: "top.naccl.service.impl.DashboardServiceImpl"
-        // 转换成路径 + ".java"
-        String relativePath = javaFileName.replace('.', File.separatorChar) + ".java";
-        File file = new File(baseFolder, relativePath);
-        if (!file.exists()) return "This file does not exist before, it's a brand new file.";
+        Path file = JavaFilePath.resolve(Path.of(baseFolder), javaFileName);
+        if (!Files.exists(file)) return "This file does not exist before, it's a brand new file.";
+        if (!Files.isRegularFile(file)) {
+            throw new IOException("Java source path is not a regular file: " + javaFileName);
+        }
+        if (Files.size(file) > MAX_AGENT_FILE_BYTES) {
+            throw new IOException("Java source file exceeds the 2 MiB Agent limit: " + javaFileName);
+        }
 
-        return new String(java.nio.file.Files.readAllBytes(file.toPath()), StandardCharsets.UTF_8);
+        return Files.readString(file, StandardCharsets.UTF_8);
     }
 
     public static List<String> findPythonFiles(String folderPath) {
@@ -106,6 +116,9 @@ public class ListFileHelper {
         if (files == null) return;
 
         for (File file : files) {
+            if (Files.isSymbolicLink(file.toPath())) {
+                continue;
+            }
             if (file.isDirectory()) {
                 String name = file.getName();
                 if (IGNORED_DIRECTORIES.contains(name)) {
